--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,13 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Dtestcontainers.reuse.enable=true</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
