--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Dtestcontainers.reuse.enable=true</argLine>
+                    <argLine>-Dtestcontainers.Ryuk.disabled=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
