--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,7 @@
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-
-spring.datasource.url=jdbc:tc:postgresql:15:///testdb
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=testuser
-spring.datasource.password=testpass
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.flyway.enabled=false
