--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,5 +10,5 @@ sonar.java.binaries=target/classes
 sonar.junit.reportPaths=target/surefire-reports
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://snonarcube:9000
 sonar.login=${SONAR_TOKEN}
