fixed actuator security access issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=mereb_backend
 server.servlet.context-path=/api
 spring.profiles.active=local
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
+management.security.enabled=false
