--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,5 @@ spring.flyway.enabled=true
 jwt.secret=${JWT_SECRET}
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+server.port=8080
