--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -36,10 +36,14 @@ jobs:
       - name: Docker Login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+      - name: Set Tag
+        id: tag
+        run: echo "tag=dev-${{ github.sha }}" >> $GITHUB_OUTPUT
+
       - name: Build & Push Docker Image
         run: |
-          docker build --platform linux/amd64 -t docker.io/${{ secrets.DOCKER_USERNAME }}/mereb-backend:dev .
-          docker push docker.io/${{ secrets.DOCKER_USERNAME }}/mereb-backend:dev
+          docker build --platform linux/amd64 -t docker.io/${{ secrets.DOCKER_USERNAME }}/mereb-backend:${{ steps.tag.outputs.tag }} .
+          docker push docker.io/${{ secrets.DOCKER_USERNAME }}/mereb-backend:${{ steps.tag.outputs.tag }}
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
@@ -55,7 +59,7 @@ jobs:
         shell: bash
         run: |
           export KUBECONFIG=$PWD/kubeconfig
-          kubectl apply -f k8s/
+          kubectl set image deployment/mereb-backend mereb-backend=docker.io/${{ secrets.DOCKER_USERNAME }}/mereb-backend:${{ steps.tag.outputs.tag }}
           kubectl rollout status deployment/mereb-backend
 
       - name: Publish Test Results
