--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,20 @@
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.enabled=true
+
 jwt.secret=${JWT_SECRET}
+
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 server.port=8080
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
+management.endpoints.web.base-path=/actuator
+
+logging.level.root=INFO
+logging.level.app.mereb=DEBUG
