--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -11,3 +11,10 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 server.port=8083
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
+management.endpoints.web.base-path=/actuator
+
+logging.level.root=INFO
+logging.level.app.mereb=DEBUG
