--- a/.github/workflows/dev-to-master-pr.yml
+++ b/.github/workflows/dev-to-master-pr.yml
@@ -20,7 +20,9 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Install GitHub CLI
-        uses: cli/cli-action@v2
+        run: |
+          sudo apt update
+          sudo apt install -y gh
 
       - name: Create PR from dev to master
         id: create_pr
