--- a/.github/workflows/dev-to-master-pr.yml
+++ b/.github/workflows/dev-to-master-pr.yml
@@ -24,6 +24,12 @@ jobs:
           sudo apt update
           sudo apt install -y gh
 
+      - name: Debug GH Auth
+        env:
+          GH_TOKEN: ${{ secrets.GH_WRITE_TOKEN }}
+        run: |
+          gh auth status
+
       - name: Create PR from dev to master
         id: create_pr
         env:
