--- a/.github/workflows/dev-to-master-pr.yml
+++ b/.github/workflows/dev-to-master-pr.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - dev
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   create-pr:
     if: github.event.pusher.name != 'github-actions[bot]'
