--- a/.github/workflows/tag-and-release.yml
+++ b/.github/workflows/tag-and-release.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           VERSION=$(date +'%Y.%m.%d.%H%M')
           echo "NEW_TAG=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Git Tag and Push
         env:
@@ -33,8 +34,9 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag ${{ env.NEW_TAG }}
-          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} ${{ env.NEW_TAG }}
+          git tag $NEW_TAG
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          git push origin $NEW_TAG
 
       - name: Generate Changelog
         id: changelog
